--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Street Fighter</string>
     <string name="name">Nome</string>
     <string name="country">País</string>
+    <string name="action_search">Pesquisar</string>
 </resources>
