--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="save">Salvar</string>
     <string name="update">Alterar</string>
     <string name="delete">Remover</string>
-    <string name="action_settings">Configurações</string>
+    <string name="action_settings">Excluir Todos</string>
     <string name="person_title">Personagens</string>
     <string name="add">Adicionar</string>
     <string name="add_title">Adicionar Personagem</string>
